<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "Museum Companion App">]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="login_option_title">Welcome to the\n<b>&appname;</b></string>
    <string name="login_option_description">Please select a one of the options to get started</string>
    <string name="login_option_guest">Continue as a guest</string>
    <string name="login_option_login">Sign in to existing account</string>
    <string name="login_option_register">Sign up to a new account</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="account_type">Account type</string>

    <string name="login_title"><b>Sign in</b></string>
    <string name="login_description">Sign into your standard or curator account</string>
    <string name="login_button">Sign in</string>
    <string name="login_not_registered"><u>Not registered? Sign up</u></string>

    <string name="register_title"><b>Sign up</b></string>
    <string name="register_description">Create a new account as a standard user or curator</string>
    <string name="register_button">Sign up</string>
    <string name="register_not_logged_in"><u>You already have an account? Sign in</u></string>

    <string-array name="account_types">
        <item>Standard</item>
        <item>Curator</item>
    </string-array>

    <string name="museum_select_title">Select a place</string>

    <string name="more">More</string>
    <string name="action_visit">Visit</string>
    <string name="action_edit">Edit</string>

    <string name="no_museums"><b>No museums added</b>\nCome back later</string>
    <string name="no_entry_submissions"><b>You cannot access this page as a Guest user</b>\nPlease register or login as a standard user or a curator</string>
    <string name="no_submissions"><b>No artefacts submitted</b>\nPress the + on the top app bar to create a new artefact</string>
    <string name="sad"><b>:(</b></string>

    <string name="searchbar_hint">Enter text to search</string>

    <string name="no_artefacts"><b>No artefacts added</b>\nCome back later</string>

    <string-array name="continents">
        <item>Asia</item>
        <item>Europe</item>
        <item>North America</item>
        <item>South America</item>
        <item>Africa</item>
        <item>Oceania</item>
        <item>Other/Unknown</item>
    </string-array>

    <string-array name="conditions">
        <item>New</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Poor</item>
    </string-array>


    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">The Macintosh Plus computer is the third model in the Macintosh line, introduced on January 16, 1986, two years after the original Macintosh and a little more than a year after the Macintosh 512K, with a price tag of US$2,599.[1] As an evolutionary improvement over the 512K, it shipped with 1 MB of RAM standard, expandable to 4 MB, and an external SCSI peripheral bus, among smaller improvements. Originally, the computer\'s case was the same beige color as the original Macintosh, Pantone 453;[2] however, in 1987, the case color was changed to the long-lived, warm gray "Platinum" color.[3]
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="placeholder"><u>Amdahl Corp.</u></string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_museum_upsert">MuseumUpsertActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>